@@ -19,6 +19,7 @@ package org.springframework.kafka.support.converter;
 import java.lang.reflect.Type;
 import java.util.List;
 
+import org.apache.kafka.clients.consumer.Consumer;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.producer.ProducerRecord;
 
@@ -37,10 +38,12 @@ public interface BatchMessageConverter extends MessageConverter {
 	 * Convert a list of {@link ConsumerRecord} to a {@link Message}.
 	 * @param records the records.
 	 * @param acknowledgment the acknowledgment.
+	 * @param consumer the consumer.
 	 * @param payloadType the required payload type.
 	 * @return the message.
 	 */
-	Message<?> toMessage(List<ConsumerRecord<?, ?>> records, Acknowledgment acknowledgment, Type payloadType);
+	Message<?> toMessage(List<ConsumerRecord<?, ?>> records, Acknowledgment acknowledgment, Consumer<?, ?> consumer,
+			Type payloadType);
 
 	/**
 	 * Convert a message to a producer record.
