@@ -1,5 +1,5 @@
 /*
- * Copyright 2016 the original author or authors.
+ * Copyright 2016-2017 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,6 +18,7 @@ package org.springframework.kafka.support.converter;
 
 import java.lang.reflect.Type;
 
+import org.apache.kafka.clients.consumer.Consumer;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.producer.ProducerRecord;
 
@@ -36,10 +37,12 @@ public interface RecordMessageConverter extends MessageConverter {
 	 * Convert a {@link ConsumerRecord} to a {@link Message}.
 	 * @param record the record.
 	 * @param acknowledgment the acknowledgment.
+	 * @param consumer the consumer
 	 * @param payloadType the required payload type.
 	 * @return the message.
 	 */
-	Message<?> toMessage(ConsumerRecord<?, ?> record, Acknowledgment acknowledgment, Type payloadType);
+	Message<?> toMessage(ConsumerRecord<?, ?> record, Acknowledgment acknowledgment, Consumer<?, ?> consumer,
+			Type payloadType);
 
 	/**
 	 * Convert a message to a producer record.
