@@ -1,5 +1,5 @@
 /*
- * Copyright 2016 the original author or authors.
+ * Copyright 2016-2017 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -47,7 +47,7 @@ public class MessagingMessageListenerAdapterTests {
 
 			@Override
 			public void onMessage(ConsumerRecord<String, String> data, Acknowledgment acknowledgment) {
-				toMessagingMessage(data, acknowledgment);
+				toMessagingMessage(data, acknowledgment, null);
 			}
 
 		}
@@ -56,10 +56,10 @@ public class MessagingMessageListenerAdapterTests {
 		RecordMessageConverter converter = mock(RecordMessageConverter.class);
 		ConsumerRecord<String, String> cr = new ConsumerRecord<>("foo", 1, 1L, null, null);
 		Acknowledgment ack = mock(Acknowledgment.class);
-		willReturn(new GenericMessage<>("foo")).given(converter).toMessage(cr, ack, String.class);
+		willReturn(new GenericMessage<>("foo")).given(converter).toMessage(cr, ack, null, String.class);
 		adapter.setMessageConverter(converter);
 		adapter.onMessage(cr, ack);
-		verify(converter).toMessage(cr, ack, String.class);
+		verify(converter).toMessage(cr, ack, null, String.class);
 	}
 
 }
