@@ -80,9 +80,6 @@ public class KafkaStreamsTests {
 	@Autowired
 	private SettableListenableFuture<String> resultFuture;
 
-	@Autowired
-	private KafkaEmbedded kafkaEmbedded;
-
 	@Test
 	public void testKStreams() throws Exception {
 		String payload = "foo" + UUID.randomUUID().toString();
